--- a/module01/weatherApp_proj/en.lproj/Localizable.strings
+++ b/module01/weatherApp_proj/en.lproj/Localizable.strings
@@ -5,3 +5,8 @@
   Created by Adam Toons on 06/08/2023.
   
 */
+
+"searchText" = "Recherche";
+"currentText" = "Maintenant";
+"todayText" = "Aujourd'hui";
+"weekText" = "Semaine";
